--- a/.github/workflows/crom.yml
+++ b/.github/workflows/crom.yml
@@ -226,6 +226,33 @@ jobs:
           mkdir kernel_workspace && cd kernel_workspace
           repo init -u https://github.com/hemasai1109/Custom_kernel_OnePlus_Nord3.git -m ${{ github.event.inputs.FILE }}.xml --depth=1
           repo sync -c -j$(nproc --all) --no-tags --no-clone-bundle --force-sync
+      - name: Copy and Rename Build Configuration
+        run: |
+          git clone https://github.com/hemasai1109/Custom_kernel_OnePlus_Nord3.git kernel_workflow
+          cp -v kernel_workflow/build.config.oplus6983-d kernel_workspace/kernel-5.10/
+          echo "pwd cmd!!!!!!!!!!!"
+          pwd
+          echo "cd kernel_workspace/kernel-5.10 cmd!!!!!!!!!!"
+          cd kernel_workspace/kernel-5.10
+          echo "ls before rename !!!!!!!!!"
+          ls
+          
+          # --- ADDED STEPS START HERE ---
+          
+          echo "Renaming the build config file"
+          mv build.config.oplus6983-d build.config.oplus6983
+          
+          echo "Validate the renamed file"
+          ls -ls build.config.oplus6983
+          
+          # --- ADDED STEPS END HERE ---
+          
+          echo "ls after rename !!!!!!!!!"
+          ls
+          echo "pwd cmd!!!!!!!!!!!"
+          pwd
+
+
 
       - name: Add in bash.rc
         run: |
@@ -268,6 +295,82 @@ jobs:
           ls
           echo "rm -rf kernel_module"
           rm -rf kernel_module
+       - name: Create thermal Makefile
+        run: |
+          echo "pwd"
+          pwd
+          echo "ls"
+          ls
+          echo "cd kernel_workspace"
+          cd kernel_workspace
+          echo "pwd"
+          pwd
+          echo "ls"
+          ls
+          echo "cd & make file"
+          cd vendor/oplus/kernel/cpu/thermal && \touch Makefile && \
+          echo "obj-y += horae_shell_temp" > Makefile && \
+          echo "obj-y += oplus_ipa_thermal" >> Makefile
+          echo "THERMAL MAKEFILE!!!!!!!!!!!!"
+          echo "pwd"
+          pwd
+          echo "ls"
+          ls
+          cat Makefile
+
+      - name: Create Makefile in fingerprint mtk
+        run: |
+          echo "pwd"
+          pwd
+          echo "ls"
+          ls
+          echo "cd to mtk !!!!!!!!"
+          cd kernel_workspace/vendor/oplus/secure/biometrics/fingerprints/bsp/drivers_kernel/component3.0/mtk
+          echo "pwd"
+          pwd
+          echo "ls"
+          ls
+          echo "rm Makefile !!!!!!!!"
+          rm Makefile 
+          cat > Makefile <<'EOF'
+          obj-$(CONFIG_OPLUS_FINGERPRINT_COMMON) += oplus_fp_common/
+
+          ### Capacitive fingerprint sensor
+          #obj-$(CONFIG_OPLUS_FINGERPRINT_FPC) += fpc/
+
+          #obj-$(CONFIG_OPLUS_FINGERPRINT_EGIS) += egis/
+
+          ### Optical fingerprint sensor
+          ifneq ($(CONFIG_OPLUS_FINGERPRINT_GOODIX)_$(CONFIG_OPLUS_FINGERPRINT_GOODIX_OPTICAL), _)
+          obj-y += goodix_optical_fp/
+          endif
+          #obj-$(CONFIG_OPLUS_FINGERPRINT_SILEAD_OPTICAL) += silead_optical_fp/
+          #obj-$(CONFIG_OPLUS_FINGERPRINT_EGIS_OPTICAL)   += egis_optical_fp/
+          obj-$(CONFIG_OPLUS_FINGERPRINT_JIIOV_OPTICAL)  += anc_driver/
+          obj-$(CONFIG_OPLUS_FINGERPRINT_SILEAD_CAP)  += silead/
+
+          ### FEATURE MACRO
+          ccflags-$(CONFIG_OPLUS_FINGERPRINT_NAVIGATION_ENABLE) += -DFP_NAVIGATION_ENABLE
+          EOF
+
+      - name: Fix codec conflict by editing mt6357-accdet.c file
+        run: |
+          echo "pwd"
+          pwd
+          echo "ls"
+          ls
+          echo "cd to codecs !!!!!!!!"
+          cd kernel_workspace/kernel-5.10/sound/soc/codecs/
+          echo "pwd"
+          pwd
+          echo "ls"
+          ls
+          ls -l mt6357-accdet.c
+          sed -i 's/^int accdet_read_audio_res(unsigned int res_value)/int mt6357_accdet_read_audio_res(unsigned int res_value)/' mt6357-accdet.c
+          sed -i 's/^EXPORT_SYMBOL(accdet_read_audio_res);/EXPORT_SYMBOL(mt6357_accdet_read_audio_res);/' mt6357-accdet.c
+          grep -E 'mt6357_accdet_read_audio_res' mt6357-accdet.c
+
+
 
       - name: Custom Kernel Suffix if set
         if: ${{ github.event.inputs.SUFFIX != '' }}
